﻿IMPROVEMENTS / FIXES
- UI:
	- Fix layout of vessel switcher window buttons and version label.
	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
- AI / WM:
	- Fix max collision avoidance strength in AI GUI.
	- Fix NRE when adjusting autotuning fields in the SPH.
- Weapons:
	- Fix bug in nuke impulse calculation and some NREs.
- RWP:
	- Reset the killer GM between competitions and don't enable the killer GM for S5R3 (the altitude limit is still active).

v1.5.7.0
IMPROVEMENTS / FIXES
- General:
	- Add option in BDA settings menu to set a max HP limit for parts.
	- Armor Tool in the VAB/SPH renamed to BDA Craft Utilities Tool.
	- Added experimental 0-100% indication of stacked lift surfaces to the BDA Craft Utilities Tool.
- AI / WM:
	- Fix bug in collision avoidance that sometimes resulted in more collisions between teammates.
	- Add action group to the WM for removing EVA kerbals' helmets (once the vessel becomes the active one).
	- Re-centre between epochs during auto-tuning if the vessel drifts more than 15km from the start position.
- Detectors:
	- Fix anti-aliasing settings affecting craft RCS. Craft will have consistent RCS regardless oF MSAA settings, note that craft may have slightly different RCS across different GPUs/graphics APIs.
	- Adjust RCS scaling value to give 1 m^2 cross-section for a 1 m^2 cross-section sphere (a 25% increase). This setting was most likely previously set with MSAA enabled, so it was set incorrectly.
- Weapons:
	- Fix a bug in bullet hit calculations within the initial bullet offset distance.
	- Fix AP rounds not penetrating rear side of parts they penetrate.
	- Beehive ammo deployment range now adjustable.
	- Fix ExplosionFX spawnpoint for Shaped Charge bullets.
	- Some fixes to nuke behavior in space.
- RWP
	- Update NPC Swap code to work with current web API.
	- Orbital deployment moved to Runway Project Round S5R3.
	- Fix AIs chasing GM killed planes.