@@ -804,7 +804,12 @@ namespace BDArmory.Control
         [KSPAction("Remove Kerbals' Helmets")] // Note: removing helmets only works for the active vessel, so this waits until the vessel is active before doing so.
         public void AGRemoveKerbalsHelmets(KSPActionParam param)
         {
-            if (!waitingToRemoveHelmets) StartCoroutine(RemoveKerbalsHelmetsWhenActiveVessel());
+            if (vessel.isActiveVessel)
+            {
+                foreach (var kerbal in VesselModuleRegistry.GetModules<KerbalEVA>(vessel).Where(k => k != null)) kerbal.ToggleHelmetAndNeckRing(false, false);
+                waitingToRemoveHelmets = false;
+            }
+            else if (!waitingToRemoveHelmets) StartCoroutine(RemoveKerbalsHelmetsWhenActiveVessel());
         }
 
         bool waitingToRemoveHelmets = false;
