@@ -276,6 +276,7 @@ Localization
         #LOC_BDArmory_Settings_SpawnDumpLogsEverySpawn = Dump Logs Every Spawn (CS)
         #LOC_BDArmory_Settings_SpawnContinueSingleSpawning = Continuous Single Spawn (S)
         #LOC_BDArmory_Settings_SpawnRandomOrder = Random Spawn Order (S)
+        #LOC_BDArmory_Settings_SpawnStartCompetitionAutomatically = Start Competition Automatically
         #LOC_BDArmory_Settings_SpawnSpawnProbeHere = Spawn Spawn-Probe Here
         #LOC_BDArmory_Settings_OutOfAmmoKillTime = Out-of-ammo Kill Time (CS)
         #LOC_BDArmory_Settings_ClearDebrisNow = Clear Debris Now
