@@ -2,9 +2,13 @@
 - UI:
 	- Fix layout of vessel switcher window buttons and version label.
 	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
+	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
+- Competition:
+	- Tweaks to sequenced competition start-up to allow a single plane to perform the sequence despite not having enough teams for a competition.
 - AI / WM:
 	- Fix max collision avoidance strength in AI GUI.
 	- Fix NRE when adjusting autotuning fields in the SPH.
+	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
 - Weapons:
 	- Fix bug in nuke impulse calculation and some NREs.
 - RWP:
